--- a/ResidentManagement/web/css/login.css
+++ b/ResidentManagement/web/css/login.css
@@ -44,7 +44,7 @@ h1 {
     font-size: 2.5rem;
 }
 
-.container {
+.container-log {
     display: flex;
     justify-content: center;
     align-items: center;
