--- a/ResidentManagement/web/css/main.css
+++ b/ResidentManagement/web/css/main.css
@@ -14,6 +14,25 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/css.css to edit this t
     font-family: "Poppins";
 }
 
+/* Nunito */
+@font-face {
+    font-family: 'Nunito';
+    src: url("../fonts/nunito/NunitoSans-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/nunito/NunitoSans-Bold.woff") format("woff"), url("../fonts/nunito/NunitoSans-Bold.ttf") format("truetype"), url("../fonts/nunito/NunitoSans-Bold.svg#SFUFutura") format("svg");
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: 'Nunito';
+    src: url("../fonts/nunito/NunitoSans-SemiBold.eot?#iefix") format("embedded-opentype"), url("../fonts/nunito/NunitoSans-SemiBold.woff") format("woff"), url("../fonts/nunito/NunitoSans-SemiBold.ttf") format("truetype"), url("../fonts/nunito/NunitoSans-SemiBold.svg#SFUFutura") format("svg");
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: 'Nunito';
+    src: url("../fonts/nunito/NunitoSans-Regular.woff") format("woff"), url("../fonts/nunito/NunitoSans-Regular.ttf") format("truetype"), url("../fonts/nunito/NunitoSans-Regular.svg#SFUFutura") format("svg");
+    font-weight: normal;
+}
+
 .container{
     max-width: 80%;
 }
